# libgit2java

./: CMakeLists.txt  README.md  clone_test.c  libgit2java.c  moe_lemonneko_nekogit_cmds_CloneCommand.c  moe_lemonneko_nekogit_cmds_GitClone.c
include/: git2.h  libgit2java.h  moe_lemonneko_nekogit_cmds_CloneCommand.h  moe_lemonneko_nekogit_cmds_GitClone.h
include/git2/: annotated_commit.h  apply.h  attr.h  blame.h  blob.h  branch.h  buffer.h  cert.h  checkout.h  cherrypick.h  clone.h  commit.h  common.h  config.h  cred_helpers.h  credential.h  credential_helpers.h  deprecated.h  describe.h  diff.h  errors.h  filter.h  graph.h  ignore.h  index.h  indexer.h  mailmap.h  merge.h  message.h  net.h  notes.h  object.h  odb.h  odb_backend.h  oid.h  pack.h  patch.h  pathspec.h  proxy.h  rebase.h  (+21 more)
include/git2/sys/: alloc.h  commit.h  config.h  cred.h  credential.h  diff.h  filter.h  hashsig.h  index.h  mempack.h  merge.h  odb_backend.h  openssl.h  path.h  refdb_backend.h  reflog.h  refs.h  repository.h  stream.h  transport.h
include/jni/: jni.h
lib/: libgit2.1.0.1.dylib
